# milly

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.db/: init-mysql.sql
src/: conftest.py  manage.py
src/commerce/: factories.py  tests.py  urls.py
src/commerce/adapter/persistence/django_orm/: django_orm_persistence_adpater.py  models.py
src/commerce/adapter/web/: dtos.py  views.py
src/commerce/app/: services.py  usecases.py
src/commerce/app/ports/: interfaces.py
src/commerce/domain/: entities.py  exceptions.py
src/commerce/migrations/: 0001_initial.py  0002_alter_productstockevents_unique_together.py  0003_alter_cupons_id_alter_cupons_user_alter_product_id_and_more.py
src/common/: decorators.py  exceptions.py  settings.py  settings_test.py  urls.py  utils.py
src/common/middlewares/: exception_middleware.py
